--- a/index.html
+++ b/index.html
@@ -1,4 +1,20 @@
-# Prequels
-## Atlanta Indie/Punk Rock
+<!DOCTYPE html>
+<html>
 
-Check out our music
+<head>
+	<title>Prequels</title>
+	<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:200,500&display=swap" rel="stylesheet"> 
+	<link rel="stylesheet" type="text/css" href="css/index.css">
+	<meta charset="utf-8">
+</head>
+
+<body>	
+<div>
+		<h1>Prequels</h1>
+		<h2>Atlanta Indie/Punk Band</h2>
+	
+	</div>
+	<p>Welcome to our website. </p>
+	
+	</body>	
+</html>
