--- a/index.html
+++ b/index.html
@@ -9,12 +9,8 @@
 </head>
 
 <body>	
-<div>
 		<h1>Prequels</h1>
-		<h2>Atlanta Indie/Punk Band</h2>
-	
-	</div>
-	<p>Welcome to our website. </p>
-	
+		<h2>Official Website for Atlanta Indie/Punk Band Prequels</h2>
+		<p>Welcome to our website. </p>	
 	</body>	
 </html>
