--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<title>Prequels</title>
-	<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:200,500&display=swap" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css?family=Krona+One|Roboto+Condensed&display=swap" rel="stylesheet"> 
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 	<meta charset="utf-8">
 </head>
