--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 
 <body>	
-		<h1>Prequels</h1>
+		<h1>prequels</h1>
 		<h2>Official Website for Atlanta Indie/Punk Band Prequels</h2>
-		<p>Welcome to our website. </p>	
+		<h5>Update 7/30/2019</h5>
+		<p>Welcome to our new website. </p>	
 	</body>	
 </html>
