--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Prequels</title>
+	<title>prequels</title>
 	<link href="https://fonts.googleapis.com/css?family=Krona+One|Roboto+Condensed&display=swap" rel="stylesheet"> 
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 	<meta charset="utf-8">
@@ -10,8 +10,10 @@
 
 <body>	
 		<h1>prequels</h1>
-		<h2>Official Website for Atlanta Indie/Punk Band Prequels</h2>
+		<h2>Official Website for the Atlanta Indie/Punk Band</h2>
 		<h5>Update 7/30/2019</h5>
-		<p>Welcome to our new website. </p>	
+		<p>Welcome to our new website. Our band formed in late 2017 from the ashes of several local and transient bands. We spent a lot of time crafting our unique blend of Punk, Indie, and 70s Rock. </p>	
+
+
 	</body>	
 </html>
