--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>	
-		<h1>prequels</h1>
+	<img src="http://the-prequels.com/img/logo.png">
 		<h2>Official Website for the Atlanta Indie/Punk Band</h2>
 		<h5>Update 7/30/2019</h5>
 		<p>Welcome to our new website. Our band formed in late 2017 from the ashes of several local and transient bands. We spent a lot of time crafting our unique blend of Punk, Indie, and 70s Rock. </p>	
