--- a/index.html
+++ b/index.html
@@ -2,18 +2,32 @@
 <html>
 
 <head>
-	<title>prequels</title>
-	<link href="https://fonts.googleapis.com/css?family=Krona+One|Roboto+Condensed&display=swap" rel="stylesheet"> 
+	<title>PREQUELS</title>
+	<link href="https://fonts.googleapis.com/css?family=Krona+One|Roboto+Condensed&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://use.typekit.net/irn0kty.css">
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 	<meta charset="utf-8">
+
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 
-<body>	
-	<img src="http://the-prequels.com/img/logo.gif">
-		<h2>Official Website for the Atlanta Indie/Punk Band</h2>
-		<h5>Update 7/30/2019</h5>
-		<p>Welcome to our new website. Our band formed in late 2017 from the ashes of several local and transient bands. We spent a lot of time crafting our unique blend of Punk, Indie, and 70s Rock. </p>	
+<body>
+	<header>
+		<h1>prequels</h1>
+		<h2>Official Website for the Atlanta Post-Punk Band</h2>
+	</header>
+	<main>
 
+			
+			<h3>Welcome</h3>
+			<p>Our band formed in early 2019 from the remnants of local band Vladimir Poutine.
+				We have put a lot of energy into crafting our unique blend of Punk, Indie, and 70's Prog Rock. </p>
+			<p>We are currently </p>
 
-	</body>	
+	</main>
+
+	<footer> Copyright 2019 <a href="http://www.the-prequels.com">WWW.THE-PREQUELS.COM</a></footer>
+</body>
+
 </html>
