--- a/index.html
+++ b/index.html
@@ -13,20 +13,21 @@
 </head>
 
 <body>
+	<div>
 	<header>
 		<h1>prequels</h1>
 		<h2>Official Website for the Atlanta Post-Punk Band</h2>
 	</header>
 	<main>
 
-			
-			<h3>Welcome</h3>
-			<p>Our band formed in early 2019 from the remnants of local band Vladimir Poutine.
-				We have put a lot of energy into crafting our unique blend of Punk, Indie, and 70's Prog Rock. </p>
-			<p>We are currently </p>
+
+		<h3>Welcome</h3>
+		<p>Our band formed in early 2019 from the remnants of local band Vladimir Poutine.
+			We have put a lot of energy into crafting our unique blend of Punk, Indie, and 70's Prog Rock. </p>
+		<p>We are currently writing new material at our rehersal space in Dectaur, GA. Our next show will be at the </p>
 
 	</main>
-
+</div>
 	<footer> Copyright 2019 <a href="http://www.the-prequels.com">WWW.THE-PREQUELS.COM</a></footer>
 </body>
 
