--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<h3>Welcome</h3>
 		<p>Our band formed in early 2019 from the remnants of local band Vladimir Poutine.
 			We have put a lot of energy into crafting our unique blend of Punk, Indie, and 70's Prog Rock. </p>
-		<p>We are currently writing new material at our rehersal space in Dectaur, GA. Our next show will be at the </p>
+		<p>We are currently writing new material at our rehearsal space in Dectaur, GA. Our next show will be on August 30th</p>
 
 	</main>
 </div>
