--- a/index.html
+++ b/index.html
@@ -18,21 +18,22 @@
 	<header>
 		<h1>prequels</h1>
 		<img src="img/standing.png">
+	
 		<h2>Official Website for the Atlanta Post-Punk Band</h2>
 	</header>
 	<main>
 
 
 		<h3>Welcome</h3>
-		<p>Our band formed in early 2019 from the remnants of local band Vladimir Poutine.
-<<<<<<< HEAD
-			We have put a lot of energy into crafting our unique blend of Punk, Indie, and 70's Rock. </p>
-		<p>We are currently writing new material at our rehersal space in Dectaur, GA. Our next show will be at the </p>
-=======
-			We have put a lot of energy into crafting our unique blend of Punk, Indie, and 70's Prog Rock. </p>
-		<p>We are currently writing new material at our rehearsal space in Dectaur, GA. Our next show will be on August 30th</p>
->>>>>>> 401072bb80e1ea67756efbdcbedc7ff9f907e805
-
+		<p>Prequels is an Atlanta Post-Punk band. Their songs are heavily influenced by the lush atmospheres of new wave, the frenetic energy of hardcore punk, and the tight delivery and  complex musical arrangement of 70s progressive rock.
+		</p>
+		<p>Prequels originally formed in the summer of 2017. Justin De la Cruz (guitar/vocals) was playing in a piano rock band at the time, but needed an outlet for his original music ideas. He placed a classified ad on craigslist seeking musicians. 
+		</p>
+		<p>Richard (drums) and Christopher (bass) responded and joined soon after. Later, Sean joined the band in 2019 as a second guitarist. With all four members of the quartet sharing songwriting duties, the band’s sound continued to evolve organically. 
+		</p>
+		<p>
+		The band quickly found success and performed regularly at popular venues like Smith’s Olde Bar and the Earl. The group has also played benefit shows for local children’s charities like 500 Songs for Kids.
+	</p>
 	</main>
 </div>
 	<footer> Copyright © 2019  <a href="http://www.the-prequels.com">WWW.THE-PREQUELS.COM</a></footer>
