--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Krona+One|Roboto+Condensed&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.typekit.net/irn0kty.css">
 	<link rel="stylesheet" type="text/css" href="css/index.css">
+	<link rel="stylesheet" type="text/css" href="css/handheld.css" media="screen and (max-width:750px)">
+	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width:500px)">
 	<meta charset="utf-8">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,28 +17,35 @@
 
 <body>
 	<div>
-	<header>
-		<h1>prequels</h1>
-		<img src="img/standing.png">
-	
-		<h2>Official Website for the Atlanta Post-Punk Band</h2>
-	</header>
-	<main>
+		<header>
+			<h1>prequels</h1>
 
+		</header>
+		<main>
+			<img src="http://the-prequels.com/img/header.png" class="scale">
 
-		<h3>Welcome</h3>
-		<p>Prequels is an Atlanta Post-Punk band. Their songs are heavily influenced by the lush atmospheres of new wave, the frenetic energy of hardcore punk, and the tight delivery and  complex musical arrangement of 70s progressive rock.
-		</p>
-		<p>Prequels originally formed in the summer of 2017. Justin De la Cruz (guitar/vocals) was playing in a piano rock band at the time, but needed an outlet for his original music ideas. He placed a classified ad on craigslist seeking musicians. 
-		</p>
-		<p>Richard (drums) and Christopher (bass) responded and joined soon after. Later, Sean joined the band in 2019 as a second guitarist. With all four members of the quartet sharing songwriting duties, the band’s sound continued to evolve organically. 
-		</p>
-		<p>
-		The band quickly found success and performed regularly at popular venues like Smith’s Olde Bar and the Earl. The group has also played benefit shows for local children’s charities like 500 Songs for Kids.
-	</p>
-	</main>
-</div>
-	<footer> Copyright © 2019  <a href="http://www.the-prequels.com">WWW.THE-PREQUELS.COM</a></footer>
+			<h2>Official Website for the Atlanta Post-Punk Band</h2>
+
+			<h3>Welcome</h3>
+			<p>Prequels is an Atlanta Post-Punk band. Their songs are heavily influenced by the lush atmospheres of new
+				wave, the frenetic energy of hardcore punk, and the tight delivery and complex musical arrangement of
+				70s progressive rock.
+			</p>
+			<p>Prequels originally formed in the summer of 2017. Justin De la Cruz (guitar/vocals) was playing in a
+				piano rock band at the time, but needed an outlet for his original music ideas. He placed a classified
+				ad on craigslist seeking musicians.
+			</p>
+			<p>Richard (drums) and Christopher (bass) responded and joined soon after. Later, Sean joined the band in
+				2019 as a second guitarist. With all four members of the quartet sharing songwriting duties, the band’s
+				sound continued to evolve organically.
+			</p>
+			<p>
+				The band quickly found success and performed regularly at popular venues like Smith’s Olde Bar and the
+				Earl. The group has also played benefit shows for local children’s charities like 500 Songs for Kids.
+			</p>
+		</main>
+	</div>
+	<footer> Copyright © 2019 <a href="http://www.the-prequels.com">WWW.THE-PREQUELS.COM</a></footer>
 </body>
 
 </html>
