--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 	<link rel="stylesheet" type="text/css" href="css/handheld.css" media="screen and (max-width:750px)">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width:500px)">
 	<meta charset="utf-8">
-
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
@@ -19,7 +18,9 @@
 	<div>
 		<header>
 			<h1>prequels</h1>
-
+			<a id="header" href="index.html">About </a>
+			<a href="contact.html">Contact </a>
+			<a href="https://prequels.bandcamp.com">Music </a>
 		</header>
 		<main>
 			<img src="http://the-prequels.com/img/header.png" class="scale">
