--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width:500px)">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-154153898-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-154153898-1');
+</script>
 
 
 </head>
